--- a/git-python-example.ipynb
+++ b/git-python-example.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install validators svn"
+    "!pip install validators svn PyGithub"
+    "#use this if cmd ninstalled libraries are not working"
    ]
   },
   {
